--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,65 @@
     transform: rotate(360deg);
   }
 }
+
+.card {
+  background-color: #61dafb;
+  color: #282c34;
+  border: 1px solid rgb(224, 224, 224);
+  border-radius: 5px;
+  box-shadow: 5px 5px rgb(180, 172, 172);
+  margin: 10px auto;
+  align-items: center;
+  text-align: center;
+  max-width: 70%;
+  display: flex;
+  flex-direction: column;
+}
+
+body {
+  background-color: whitesmoke;
+}
+
+.todo-list {
+  background-color: white;
+  margin: auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #efefef;
+  box-shadow:
+  /* The top layer shadow */
+      0 1px 1px rgba(0,0,0,0.15),
+          /* The second layer */
+      0 10px 0 -5px #eee,
+          /* The second layer shadow */
+      0 10px 1px -4px rgba(0,0,0,0.15),
+          /* The third layer */
+      0 20px 0 -10px #eee,
+          /* The third layer shadow */
+      0 20px 1px -9px rgba(0,0,0,0.15);
+  padding: 30px;
+}
+
+.todo-item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px 20px 10px;
+  width: 70%;
+  border-bottom: 1px solid #cecece;
+  font-family: Roboto, sans-serif;
+  font-weight: 100;
+  font-size: 15px;
+  color: #333333;
+}
+
+input[type=checkbox] {
+  margin-right: 10px;
+  font-size: 30px;
+}
+
+input[type=checkbox]:focus {
+  outline: 0;
+}
