--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,11 @@
 }
 
 .App-header {
+  padding: 25px;
   background-color: #282c34;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -26,6 +27,16 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.login-text {
+  padding-left: 200px;
+  font-size: 20px;
+}
+.login-button {
+  margin-left: 20px;
+  width: 100px;
+  float: right;
 }
 
 @keyframes App-logo-spin {
@@ -57,7 +68,7 @@ body {
 
 .todo-list {
   background-color: white;
-  margin: auto;
+  margin: 50px auto;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -88,6 +99,16 @@ body {
   font-weight: 100;
   font-size: 15px;
   color: #333333;
+}
+
+.todo-item-text {
+  text-decoration: line-through;
+  color: grey;
+  font-style: italic;
+}
+
+.user-name-input-field {
+  margin-left: 10px;
 }
 
 input[type=checkbox] {
